add task class and operation class

--- a/web/theme/index.html
+++ b/web/theme/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>to do</title>
 </head>
 <body>
 
+
+<script src="task.js"></script>
+<script src="operation.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
