add apiService, add method getting tasks from backend

--- a/web/theme/index.html
+++ b/web/theme/index.html
@@ -9,6 +9,7 @@
 
 <script src="task.js"></script>
 <script src="operation.js"></script>
-<script src="index.js"></script>
+<script src="apiService.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
